--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   audioplayers: ^6.5.1
   confetti: ^0.8.0
   easy_localization: ^3.0.8
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
