--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_local_notifications: ^17.2.3
+
   cupertino_icons: ^1.0.8
   provider: ^6.1.5+1
   google_fonts: ^6.3.2
