--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/sounds/
+    - assets/sounds/music/
+    - assets/sounds/bell/
     - assets/translations/
     - assets/icon/
 
